feat: Mass ingest missing Apophysis-J fractal variations into JWildfire.
Co-authored-by: robertpelloni <673434+robertpelloni@users.noreply.github.com>